--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -3,10 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        WindowStartupLocation="CenterScreen"
+        Icon="Assets/favicon.ico"
+        WindowStyle="ThreeDBorderWindow"
         xmlns:blazor="clr-namespace:Microsoft.AspNetCore.Components.WebView.Wpf;assembly=Microsoft.AspNetCore.Components.WebView.Wpf"
-
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MudBlazorHybridWPF" Height="450" Width="800">
     <Grid>
     </Grid>
 </Window>
